; ModuleID = '/home/carl/AnghaBench/sqlcipher/ext/fts1/extr_fts1.c_sql_prepare.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/ext/fts1/extr_fts1.c_sql_prepare.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [18 x i8] c"FTS1 prepare: %s\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8*, i8*, i32**, i8*)* @sql_prepare to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @sql_prepare(i32* %0, i8* %1, i8* %2, i32** %3, i8* %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32**, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i32, align 4
  store i32* %0, i32** %6, align 8
  store i8* %1, i8** %7, align 8
  store i8* %2, i8** %8, align 8
  store i32** %3, i32*** %9, align 8
  store i8* %4, i8** %10, align 8
  %13 = load i8*, i8** %10, align 8
  %14 = load i8*, i8** %7, align 8
  %15 = load i8*, i8** %8, align 8
  %16 = call i8* @string_format(i8* %13, i8* %14, i8* %15)
  store i8* %16, i8** %11, align 8
  %17 = load i8*, i8** %11, align 8
  %18 = call i32 @TRACE(i8* %17)
  %19 = load i32*, i32** %6, align 8
  %20 = load i8*, i8** %11, align 8
  %21 = load i32**, i32*** %9, align 8
  %22 = call i32 @sqlite3_prepare(i32* %19, i8* %20, i32 -1, i32** %21, i32* null)
  store i32 %22, i32* %12, align 4
  %23 = load i8*, i8** %11, align 8
  %24 = call i32 @free(i8* %23)
  %25 = load i32, i32* %12, align 4
  ret i32 %25
}

declare dso_local i8* @string_format(i8*, i8*, i8*) #1

declare dso_local i32 @TRACE(i8*) #1

declare dso_local i32 @sqlite3_prepare(i32*, i8*, i32, i32**, i32*) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
